--- a/index.html
+++ b/index.html
@@ -224,14 +224,15 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="grid-item webdev">
+                        <div class="grid-item webdev"
+                            onclick="window.open('https://guusp.github.io/GuuspPortfolio/','mywindow');">
                             <div class="gallery-image">
-                                <img src="./img/portfolio/port3.png" alt="">
+                                <img src="img\portfolio\portfolio.png" alt="">
                                 <div class="img-overlay">
                                     <div class="plus"></div>
                                     <div class="img-description">
-                                        <h3>Web Dev</h3>
-                                        <h5>View Demo</h5>
+                                        <h3>Portfolio</h3>
+                                        <h5>Veja a página</h5>
                                     </div>
                                 </div>
                             </div>
@@ -244,7 +245,7 @@
                                     <div class="plus"></div>
                                     <div class="img-description">
                                         <h3>Landing Page</h3>
-                                        <h5>Git Repository</h5>
+                                        <h5>Repositório Git</h5>
                                     </div>
                                 </div>
                             </div>
@@ -257,7 +258,7 @@
                                     <div class="plus"></div>
                                     <div class="img-description">
                                         <h3>Tribute Page</h3>
-                                        <h5>Git Repository</h5>
+                                        <h5>Repositório Git</h5>
                                     </div>
                                 </div>
                             </div>
