--- a/index.html
+++ b/index.html
@@ -123,6 +123,12 @@
                                     <div class="skill-progress" data-progress="60%"></div>
                                 </div>
                             </div>
+                            <div class="skill cpp">
+                                <h3 class="skill-tile">C++</h3>
+                                <div class="skill-bar">
+                                    <div class="skill-progress" data-progress="50%"></div>
+                                </div>
+                            </div>
                         </div>
                     </div>
 
