--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 
 <body>
     <header>
-        <nav class="container">
-            <div class="links">
+        <nav class="container ">
+            <i class="fa-solid fa-bars" onclick="navBar()" id="nav-icon"></i>
+            <div class="links" id="links">
                 <ul>
                     <li>
                         <a href="#showcase">Início</a>
@@ -29,13 +30,13 @@
                     <li>
                         <a href="#portfolio">Portfólio</a>
                     </li>
-
-                    <li>
-                        <a href="#contact">Contato</a>
-                    </li>
                     <li>
                         <a href="https://github.com/GuusP" target="_blank">Github</a>
                     </li>
+                    <li>
+                        <a href="#contact">Contato</a>
+                    </li>
+
                 </ul>
             </div>
 
@@ -65,7 +66,7 @@
                 <div class="column-2 image">
                     <img src="img/Design_sem_nome__7_-removebg-preview.png" alt="Person Picture"
                         class="img-element z-index">
-                    <img src="img/shapes/points2.png" alt="" class="points points2">
+
                 </div>
             </div>
         </section>
@@ -85,9 +86,10 @@
                             Ciência da Computação na Universidade Federal do Paraná.<br><br>
 
                             No momento, estou focando no
-                            aprendizado de desenvolvimento web, principalmente Front-End mas também almejo aprender
+                            aprendizado de desenvolvimento web, inicialmente Front-End mas também almejo aprender
                             sobre o Back-End. Além disso, também possuo prática com desenvolvimento de jogos e apps na
-                            Unity. <br><br>
+                            Unity utilizando C#, então planejo aprender sobre back-end com .NET, já que possuo
+                            experiência com C#. <br><br>
 
                             Sou uma pessoa focada, determinada e aberta a novos aprendizados. Acredito que posso somar e
                             aprender muito dentro de sua equipe!
@@ -103,12 +105,6 @@
                                 <h3 class="skill-tile">CSS</h3>
                                 <div class="skill-bar">
                                     <div class="skill-progress" data-progress="55%"></div>
-                                </div>
-                            </div>
-                            <div class="skill js">
-                                <h3 class="skill-tile">JavaScript</h3>
-                                <div class="skill-bar">
-                                    <div class="skill-progress" data-progress="20%"></div>
                                 </div>
                             </div>
                             <div class="skill c-sharp">
@@ -257,18 +253,32 @@
                             </div>
                         </div>
                         <div class="grid-item webdev"
-                            onclick="window.open('https://github.com/GuusP/tribute-page','mywindow');">
+                            onclick="window.open('https://github.com/GuusP/webdev/tree/main/responsive_web_design/portfolio-page','mywindow');">
                             <div class="gallery-image">
-                                <img src="img\portfolio\tribute.png" alt="">
+                                <img src="img\portfolio\portfoliofreeCode.png" alt="">
                                 <div class="img-overlay">
                                     <div class="plus"></div>
                                     <div class="img-description">
-                                        <h3>Tribute Page</h3>
+                                        <h3>Portfolio freeCodeCamp</h3>
                                         <h5>Repositório Git</h5>
                                     </div>
                                 </div>
                             </div>
                         </div>
+                        <div class="grid-item webdev"
+                            onclick="window.open('https://github.com/GuusP/webdev/tree/main/responsive_web_design/landing-page','mywindow');">
+                            <div class="gallery-image">
+                                <img src="img\portfolio\landingFreeCode.png" alt="">
+                                <div class="img-overlay">
+                                    <div class="plus"></div>
+                                    <div class="img-description">
+                                        <h3>Landing Page freeCodeCamp</h3>
+                                        <h5>Repositório Git</h5>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </div>
@@ -303,7 +313,7 @@
                             <div class="contact-icons">
                                 <i class="fa-brands fa-linkedin-in"></i>
                             </div>
-                            <a href="">
+                            <a href="https://www.linkedin.com/in/gustavo-vin%C3%ADcius-paulino/" target="_blank">
                                 <p class="contact-text">Gustavo Vinícius Paulino</p>
                             </a>
                         </div>
