--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="column-1">
                     <h1 class="showcase-title">Gustavo Paulino</h1>
                     <p class="text">Oi, eu sou Gustavo Paulino, desenvolvedor web Front-End e de jogos!</p>
-                    <a href="Gustavo Vinícius Paulino - CV.pdf" download="" class="btn">Baixar Currículo</a>
+                    <a href="Currículo W - Gustavo Paulino.pdf" download="" class="btn">Baixar Currículo</a>
                 </div>
 
                 <div class="column-2 image">
